# Robust-Registration-Learning-SPFT

./: LICENSE  README.md  README.org
Machine-Learning/Common/: AddAWGN_XYZPoints.m  GetSphericalImage.m  PlotSurface1.m  gen_surf_data.m
Machine-Learning/Common/R-SCNN-Utils/: imagecast.m  sphvoxels.m
Machine-Learning/ModelNet40Preprocessing/: ReadMe.txt  airplane_0627.csv  airplane_0627_sp.csv  csvSerializeDeserialize.m  extractRSCNNOccupancyImages.m  postprocessing.m  preprocessing.m  read_off.m  tfrecord_multiradii_images_generation.ipynb
Machine-Learning/ModelNet40Preprocessing/archive/: ReadMe.txt
SPFT-ArrayFire/: ReadMe.txt  TestSerializedSphericalGridArrayFire.csv  TestSerializedVolume.csv  Top-CMakeLists.txt
SPFT-ArrayFire/helloworld/: CMakeLists.txt  helloworld.cpp
SPFT-ArrayFire/spft/: CMakeLists.txt  spft.cpp
Volume-Registration/3D_SphericalPolarFT_Registration/: AddHolesInVolume.m  ComputeSOFTRotationPairs.m  ComputeSOFTRotation_SphericalPolarFT.m  ComputeSphericalPolarFTPairs.m  ComputeTranslationWithVolumes.m  GetFullRotationMatrixZYZ.m  GetSphericalImage.m  Pad_MakeVolumeDimensionOdd.m  PlotTwoRotationAngles.m  SymbolicComputationFactorizeRotation.m  TransformSphericalImagePlotToRectangular.m  VerticesFacesToVolume.m
Volume-Registration/3D_SphericalPolarFT_Registration/BasicCollection/: 4DTestPlot.m  AddingPerturbations.m  AdditiveNoiseTest.m  GetFullRotationMatrix.m  Holes_MissingDataTestOurMethod.m  NoiselessAnomalies.m  NoiselessSimpleComparison.m  (+9 more)
Volume-Registration/MEX_SOFT_Project/: MEX_SOFT_Project.sdf  MEX_SOFT_Project.sln
(+34778 files in other folders)
